--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,6 @@
 
 <div id="container">
-<p>MOVIE SEARCHER</p>
+<p>MOVIE FISHER</p>
 </div>
 <form id="searchfield" action="/movies" method="get">
   <input type="text" name="movie_title" placeholder="movie title"/>
